Navbarga 2 ta silka qo'shdim

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <nav>
         <ul>
             <li><a href="">Home</a></li>
+            <li><a href="">Osiyo</a></li>
             <li><a href="">Product</a></li>
             <li><a href="">Create</a></li>
+            <li><a href="">Mol</a></li>
         </ul>
     </nav>
 
